# mylinux

./: .bashrc  .viminfo  .vimrc  .zshrc
.config/coc/extensions/: package.json
.config/i3/: config
.config/nvim/: lazy-lock.json
.config/polybar/: config.ini  launch.sh  paths.sh
.vim/: .netrwhist  coc-settings.json
.vim/colors/: dark-kali.vim
Documents/: can_del.txt  references  requirements.txt
Documents/archive/dr_rikhtehgaran_soc_pr/: experience_notes  notes
Documents/archive/quera_sec_course_preps/: .interview_prep.swp  interview_prep  resume.txt
Documents/linux_build_init/installs/: arch_reqs.txt  crontab_jobs  crontab_setup.sh  requirements.txt  requirements_cmd.txt  requirements_lib.txt  setup_crontab.sh  setup_requirements.sh  setup_vim.sh
Documents/people/P.N/: arvan_ips  drr  monitor.py  solutions_to_monitor  targets  todo
Documents/people/uni_network/: notes  (+4 more)
Documents/src/challenges/ctf-stuff/AI CTF/playing_with_fonts/fontplay/: .env.example  Dockerfile  pyproject.toml
Documents/src/challenges/ctf-stuff/AI CTF/playing_with_fonts/fontplay/fontplay/: __init__.py  app.py  wsgi.py
Documents/src/challenges/ctf-stuff/AI CTF/playing_with_fonts/fontplay/fontplay/static/: a11y.js  style.css
Documents/src/challenges/ctf-stuff/AI CTF/playing_with_fonts/fontplay/fontplay/templates/: index.html  rendered.html
Documents/startup/: alias.sh  bat.sh  fix_time.sh  help  init.sh  lip.sh  silly_dhclient.py  silly_dhclient.sh  system-cpu-temppercore.sh  t
Tools/commands/: dnsjumper  mouse_init  silly_dhclient  startup_int  update  wlan_init
(+275 files in other folders)
